# arxiv-daily

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  admin.toml  arxiv_daily.db  category.toml  clippy.toml  config.toml  release.py  rustfmt.toml  surprise.toml
.cargo/: config.toml
assets/: cert.pem  gemma-270m.gguf  key.pem
data/: arxiv_daily.db
scraper/: Cargo.toml  arxiv_cate.json  build.rs  config.toml
scraper/src/: main.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
tmp/: getpaper.py  main.rs  main_20260106001.rs  main_int.rs  test_ids.rs
web_app/: Cargo.toml  build.rs  build_config.toml  tailwind.config.js
web_app/assets/: cert.pem  key.pem
web_app/src/: ai.rs  lib.rs  main.rs  surprise.rs
web_app/style/: tailwind.css
