[package]
name = "scraper"
version = "1.1.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["Xinyu Yang <Pana.Yang@hotmail.com>"]
description = "This is arXiv-daily: A dashboard for daily arXiv papers."
license = "Apache-2.0"
repository = "https://github.com/panayang/arxiv-daily"
homepage = "https://github.com/panayang/arxiv-daily"
readme = "../README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
feed-rs = "2.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "macros",
] }
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
shared = { path = "../shared" }

[[bin]]
name = "arxiv_daily"
path = "src/main.rs"

[build-dependencies]
vergen = { version = "9", features = [
    "build",
    "cargo",
    "cargo_metadata",
    "emit_and_set",
    "regex",
    "rustc",
    "rustc_version",
    "si",
    "sysinfo",
    "time",
] }
vergen-gitcl = { version = "9", features = [
    "build",
    "cargo",
    "emit_and_set",
    "rustc",
    "si",
] }
