[package]
name = "shared"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.6" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[build-dependencies]
vergen = { version = "9", features = [
    "build",
    "cargo",
    "cargo_metadata",
    "emit_and_set",
    "regex",
    "rustc",
    "rustc_version",
    "si",
    "sysinfo",
    "time",
] }
vergen-gitcl = { version = "1", features = [
    "build",
    "cargo",
    "emit_and_set",
    "rustc",
    "si",
] }
