[package]
name = "shared"
version = "1.1.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Xinyu Yang <Pana.Yang@hotmail.com>"]
description = "This is arXiv-daily: A dashboard for daily arXiv papers."
license = "Apache-2.0"
repository = "https://github.com/panayang/arxiv-daily"
homepage = "https://github.com/panayang/arxiv-daily"
readme = "../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.6" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[build-dependencies]
vergen = { version = "9", features = [
    "build",
    "cargo",
    "cargo_metadata",
    "emit_and_set",
    "regex",
    "rustc",
    "rustc_version",
    "si",
    "sysinfo",
    "time",
] }
vergen-gitcl = { version = "9", features = [
    "build",
    "cargo",
    "emit_and_set",
    "rustc",
    "si",
] }
