[package]
name = "web_app"
version = "0.2.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["bitcode"] }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
server_fn = { version = "0.8", features = ["bitcode"] }
axum = { version = "0.8", optional = true, features = ["macros"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = [
    "fs",
    "compression-full",
] }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "macros",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = { version = "1.10", optional = true }
shared = { path = "../shared" }
toml = { version = "0.9", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1.0", optional = true }
log = "0.4"
bytes = "1"
http = "1"
reqwest = { version = "0.13", features = ["json"], optional = true }
feed-rs = { version = "2.3", optional = true }
serde_json = "1.0"
web-sys = { version = "0.3.83", features = [
    "Window",
    "Element",
    "HtmlElement",
    "Node",
    "History",
    "Document",
    "Location",
    "ScrollToOptions",
    "ScrollBehavior",
] }
open = { version = "5", optional = true }
rust-embed = "8.9.0"
mime_guess = "2.0.5"
kalosm = { version = "0.4.0", features = [
    "language",
    "llama",
], optional = true }
futures-util = "0.3"

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:console_log",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:sqlx",
    "dep:rayon",
    "dep:toml",
    "dep:reqwest",
    "dep:feed-rs",
    "dep:open",
    "dep:kalosm",
]

[lib]
crate-type = ["rlib", "cdylib"]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "web_app"
# The site root folder is where cargo-leptos generate all files. Output: site-root/pkg/app.js/wasm
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into main.css
style-file = "style/tailwind.css"
# [Optional] The tailwind input file.
tailwind-input-file = "style/tailwind.css"
# [Optional] The tailwind config file.
tailwind-config-file = "tailwind.config.js"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the total project is a library, the features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# The IP and port (eg: 127.0.0.1:8088) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:8088"
# The port to use for automatic reload monitoring
reload-port = 8089
# [Optional] Command to use when running end2end tests. It will run in the end2end-dir.
# [Optional] The browser to use for end2end tests, either 'firefox', 'chrome' or 'safari'.
# [Optional] If the site-root and site-pkg-dir should be cleaned before building.
# [Optional] The environment to use when running cargo-leptos.
# [Optional] The command to use when running cargo-leptos.
# [Optional] The working directory of the frontend wasm-bindgen build.
# [Optional] The directory to search for source files.
# The directory to search for asset files.
assets-dir = "public"
# [Optional] The directory to search for wasm target files.
# [Optional] The directory to search for binary target files.
# [Optional] The directory where the binary will be built.
# [Optional] The directory where the wasm will be built.
# [Optional] The directory where the wasm-bindgen output will be written.
# [Optional] The directory where the final binary will be written.
# [Optional] The directory where the final wasm will be written.
# [Optional] The directory where the final assets will be written.
# [Optional] The directory where the final styles will be written.
# [Optional] The directory where the final site files will be written.
# [Optional] The directory where the final site static files will be written.
# [Optional] The directory where the final site pkg files will be written.
# [Optional] The directory where the final site pkg assets will be written.
# [Optional] The directory where the final site pkg styles will be written.
# [Optional] The directory where the final site pkg scripts will be written.
# [Optional] The directory where the final site pkg wasm will be written.
# [Optional] The directory where the final site pkg wasm-bindgen will be written.
# [Optional] The directory where the final site pkg artifacts will be written.

[build-dependencies]
vergen = { version = "9", features = [
    "build",
    "cargo",
    "cargo_metadata",
    "emit_and_set",
    "regex",
    "rustc",
    "rustc_version",
    "si",
    "sysinfo",
    "time",
] }
vergen-gitcl = { version = "1", features = [
    "build",
    "cargo",
    "emit_and_set",
    "rustc",
    "si",
] }
