[package]
name = "web_app"
version = "0.6.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Xinyu Yang <Pana.Yang@hotmail.com>"]
description = "This is arXiv-daily: A dashboard for daily arXiv papers."
license = "Apache-2.0"
repository = "https://github.com/panayang/arxiv-daily"
homepage = "https://github.com/panayang/arxiv-daily"
readme = "../README.md"

[dependencies]
leptos = { version = "0.8", features = ["bitcode"] }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
server_fn = { version = "0.8", features = ["bitcode"] }
axum = { version = "0.8", optional = true, features = ["macros"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = [
    "fs",
    "compression-full",
] }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "macros",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = { version = "1.10", optional = true }
shared = { path = "../shared" }
toml = { version = "0.9", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1.0", optional = true }
log = "0.4"
bytes = "1"
http = "1"
reqwest = { version = "0.13", features = ["json"], optional = true }
feed-rs = { version = "2.3", optional = true }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "Window",
    "Element",
    "HtmlElement",
    "Node",
    "History",
    "Document",
    "Location",
    "ScrollToOptions",
    "ScrollBehavior",
] }
open = { version = "5", optional = true }
rust-embed = "8.9"
mime_guess = "2.0"
kalosm = { version = "0.4", features = ["language", "llama"], optional = true }
futures-util = { version = "0.3", optional = true }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
anyhow = "1.0"
tokenizers = { version = "0.22", optional = true }
mistralrs = { version = "0.7", optional = true }
rssn = { version = "0.2", features = ["full"], optional = true }
bincode-next = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
memmap2 = "0.9"
simd-json = { version = "0.17", optional = true }
pulp = { version = "0.22", features = [
    "macro",
    "x86-v4",
    "nightly",
], optional = true }
leptos_workers = { version = "0.3", features = ["ssr"] }
wgpu = "28.0"
regex = "1.10"
latex2mathml = "0.2"
futures = "0.3.31"
env_logger = "0.11.8"

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:futures-util",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:sqlx",
    "dep:rayon",
    "dep:toml",
    "dep:reqwest",
    "dep:feed-rs",
    "dep:open",
    "dep:kalosm",
    "dep:futures-util",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:mistralrs",
    "dep:rssn",
    "dep:tokenizers",
    "dep:simd-json",
    "dep:pulp",
]

[lib]
crate-type = ["rlib", "cdylib"]

[package.metadata.leptos]
output-name = "web_app"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/tailwind.css"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
reload-port = 8089
assets-dir = "public"
bin-features = ["ssr"]
lib-features = ["hydrate"]
site-addr = "0.0.0.0:8088"

[build-dependencies]
bincode-next = { version = "2.0", features = ["serde"] }
tokenizers = { version = "0.22" }
serde_json = "1.0"
simd-json = "0.17"
vergen = { version = "9", features = [
    "build",
    "cargo",
    "cargo_metadata",
    "emit_and_set",
    "regex",
    "rustc",
    "rustc_version",
    "si",
    "sysinfo",
    "time",
] }
vergen-gitcl = { version = "9", features = [
    "build",
    "cargo",
    "emit_and_set",
    "rustc",
    "si",
] }
